<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:custom="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/playing"
    android:forceDarkAllowed="false">

    <edu.wm.cs.cs301.ConnorYu.gui.MazePanel
        android:id="@+id/panel"
        android:layout_width="317dp"
        android:layout_height="290dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <Button
        android:id="@+id/forward"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/forward_arrow"
        android:backgroundTint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <Button
        android:id="@+id/left"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/left_arrow"
        android:backgroundTint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forward"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forward" />

    <Button
        android:id="@+id/right"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/right_arrow"
        android:backgroundTint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/forward"
        app:layout_constraintTop_toBottomOf="@+id/forward" />

    <Button
        android:id="@+id/fullMaze"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:text="@string/fullMaze"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/solution"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:text="@string/solution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fullMaze"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/back_arrow"
        android:backgroundTint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/left"
        app:layout_constraintTop_toBottomOf="@+id/forward"
        app:layout_constraintVertical_bias="0.875" />

    <Button
        android:id="@+id/toggleWalls"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="27dp"
        android:text="@string/walls"
        app:layout_constraintEnd_toStartOf="@+id/fullMaze"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>